# pv021_project

./: .gitignore  CMakeLists.txt  README.md  network  run.sh
src/: Layer.cpp  Layer.h  Neuron.cpp  Neuron.h  activation_functions.cpp  activation_functions.h  csv_io.cpp  csv_io.h  hyperparameters.h  main.cpp  neural_network_functions.cpp  neural_network_functions.h  normalization.cpp  normalization.h
